# VXG.Embedded.SDK

./: .gitignore  README.md  gcovr.cfg  meson.build  meson_options.txt
doc/: Doxyfile  app-dev.md  build-system.md  compile.md  libvxgcloudagent.doxygen.in  mainpage.md  meson.build
examples/: cloud-agent.cc
examples/app/: meson.build  meson_options.txt
examples/app/cross/: arm-example.txt
examples/app/src/: cloud-agent-minimal.cc  cloud-agent.cc
examples/app/subprojects/: vxgcloudagent.wrap
examples/streaming/: ffmpeg.cc  ffmpeg_multipart_record.cc  ffmpeg_rtmp2fake.cc  remux.cc  rtsp2rtmp.cc
src/: meson.build
src/agent/: callback.h  config.h  direct-upload-storage.h  event-manager.cc  event-manager.h  event-state.h  event-stream.h  manager-config.h  manager.cc  manager.h  rtsp-stream.h  stream-manager.h  stream-storage.h  stream.h  timeline-synchronizer.h  timeline.h  upload.h
src/agent-proto/: command-handler.cc  command-handler.h  config.h  proto.h
src/agent-proto/command/: audio-detection.h  audio-file.h  backward-start.h  backward-stop.h  bye.h  cam-get-log.h  cam-hello.h  cam-list-wifi.h  cam-memorycard.h  cam-ptz.h  cam-register.h  cam-set-current-wifi.h  cam-trigger-event.h  cam-update-preview.h  cam-upgrade-firmware.h  cam_event.h  command-factory.h  command-list.h  command.cc  command.h  configure.h  direct-upload-url.h  get-audio-detection.h  get-cam-audio-conf.h  get-cam-events.h  get-cam-status.h  get-cam-video-conf.h  get-direct-upload-url.h  get-motion-detection.h  get-osdconf.h  get-ptz-conf.h  get-stream-by-event.h  get-stream-caps.h  get-stream-config.h  get-supported-streams.h  hello.h  raw-message.h  register.h  report-problem.h  set-cam-audio-conf.h  (+13 more)
src/agent-proto/objects/: caps.h  config.h
src/agent-proto/tests/: test-command-handler.cc  test-command-handler.h  test-command-matchers.h  test-command.cc
src/agent/tests/: agent-callback.h  event-manager.cc  event-manager.h  event-state.cc  event-state.h  manager.cc  manager.h  media-stream.h  queued-async-storage.cc  queued-async-storage.h  upload.cc  upload.h
src/cloud/: CloudAPI.h  CloudAPIEndPoints.h  CloudHelpers.h  CloudRegToken.h  CloudReturnCodes.h  CloudSDK.cc  CloudSDK.h  CloudShareConnection.h  CloudToken.h  Uri.h  cloud_api_v2.h  cloud_api_v4.h
src/net/: http.cc  http.h  lws-sshd.c  lws-sshd.h  lws_common.h  sshd.cc  sshd.h  transport.h  websockets.cc  websockets.h
src/platform/: keyboard-event-stream.h  rest-api.h  ssh-tunnel.h  storage.h  tunnel-service.h
src/s3/: meson.build  s3-storage.cc  s3-storage.h  s3.h  status-message.h
src/streamer/: base_streamer.h  fake_sink.h  ffmpeg_common.cc  ffmpeg_common.h  ffmpeg_http_sink.h  ffmpeg_multifile_sink.h  ffmpeg_remux_stream.h  ffmpeg_segmented_sink.h  ffmpeg_sink.cc  ffmpeg_sink.h  ffmpeg_source.cc  ffmpeg_source.h  multifrag_sink.cc  multifrag_sink.h  onvif_metadata_sink.h  recording_stream.h  recroding_stream.h  rtmp_sink.h  rtmp_source.h  rtsp_onvif_metadata_event_stream.h  rtsp_source.h  stats.c  stats.h  stream.h
src/tests/: gtest-all.cc  meson.build  test-helpers.h  test_Properties.cc  test_Timeline.cc  test_Transport.cc  test_Transport.h  test_Utils.cc  test_http.cc  test_media_stream.h  test_metadata_event_stream.cc
src/utils/: base64.cc  base64.h  logging.cc  logging.h  loguru.cc  loguru.h  packbits.c  packbits.h  profile.h  properties.cc  properties.h  queued-handler.h  utils.cc  utils.h
subprojects/: args.wrap  aws-sdk-cpp.wrap  date.wrap  ffmpeg.wrap  gtest.wrap  libcurl.wrap  librtmp.wrap  libssh2.wrap  libwebsockets.wrap  nlohmann_json.wrap  spdlog.wrap  tzmap.wrap  xml2json.wrap
subprojects/packagefiles/date/: meson.build  meson_options.txt
subprojects/packagefiles/ffmpeg/: meson.build  meson_options.txt
subprojects/packagefiles/ffmpeg/libavformat/: async.c  avformat.h  meson.build  rtpdec.c  rtsp.c  rtsp.h  rtspdec.c  segment.c
subprojects/packagefiles/ffmpeg/libavutil/: fifo.c
subprojects/packagefiles/librtmp/: meson.build
subprojects/packagefiles/libssh2/: meson.build  meson_options.txt
subprojects/packagefiles/libwebsockets/: meson.build
subprojects/packagefiles/libwebsockets-v4.3.1-ssh-vxg/: meson.build  meson_options.txt
subprojects/packagefiles/libwebsockets-v4.3.1-ssh-vxg/lib/roles/http/client/: client-http.c
subprojects/packagefiles/openssl-1.1.1/: meson.build
subprojects/packagefiles/xml2json/: meson.build
