
core_headers = [
  ['platform/storage.h','platform'],
  ['platform/rest-api.h','platform'],
  ['net/transport.h','net'],
  ['net/http.h','net'],
  ['net/websockets.h','net'],
  ['agent/manager.h','agent'],
  ['agent/rtsp-stream.h','agent'],
  ['agent/manager-config.h','agent'],
  ['agent/event-stream.h','agent'],
  ['agent/callback.h','agent'],
  ['agent/stream.h','agent'],
  ['streamer/ffmpeg_sink.h','streamer'],
  ['streamer/multifrag_sink.h','streamer'],
  ['streamer/stream.h','streamer'],
  ['streamer/base_streamer.h','streamer'],
  ['streamer/ffmpeg_multifile_sink.h','streamer'],
  ['streamer/ffmpeg_source.h','streamer'],
  ['streamer/ffmpeg_common.h','streamer'],
  ['streamer/stats.h','streamer'],
  ['streamer/fake_sink.h','streamer'],
  ['streamer/rtmp_sink.h','streamer'],
  ['streamer/rtsp_source.h','streamer'],
  ['streamer/rtmp_source.h','streamer'],
  ['cloud/CloudShareConnection.h','cloud'],
  ['cloud/CloudAPI.h','cloud'],
  ['cloud/Uri.h','cloud'],
  ['cloud/CloudRegToken.h','cloud'],
  ['cloud/CloudReturnCodes.h','cloud'],
  ['cloud/CloudSDK.h','cloud'],
  ['cloud/CloudToken.h','cloud'],
  ['cloud/CloudAPIEndPoints.h','cloud'],
  ['cloud/CloudHelpers.h','cloud'],
  ['agent-proto/command/get-osdconf.h','agent-proto/command'],
  ['agent-proto/command/register.h','agent-proto/command'],
  ['agent-proto/command/set-cam-video-conf.h','agent-proto/command'],
  ['agent-proto/command/cam-list-wifi.h','agent-proto/command'],
  ['agent-proto/command/raw-message.h','agent-proto/command'],
  ['agent-proto/command/utils.h','agent-proto/command'],
  ['agent-proto/command/get-direct-upload-url.h','agent-proto/command'],
  ['agent-proto/command/set-cam-event.h','agent-proto/command'],
  ['agent-proto/command/bye.h','agent-proto/command'],
  ['agent-proto/command/set-motion-detection.h','agent-proto/command'],
  ['agent-proto/command/stream-stop.h','agent-proto/command'],
  ['agent-proto/command/unset-helper.h','agent-proto/command'],
  ['agent-proto/command/direct-upload-url.h','agent-proto/command'],
  ['agent-proto/command/set-cam-parameter.h','agent-proto/command'],
  ['agent-proto/command/cam-get-log.h','agent-proto/command'],
  ['agent-proto/command/get-cam-events.h','agent-proto/command'],
  ['agent-proto/command/cam-register.h','agent-proto/command'],
  ['agent-proto/command/get-cam-status.h','agent-proto/command'],
  ['agent-proto/command/get-cam-audio-conf.h','agent-proto/command'],
  ['agent-proto/command/cam-update-preview.h','agent-proto/command'],
  ['agent-proto/command/get-supported-streams.h','agent-proto/command'],
  ['agent-proto/command/get-stream-by-event.h','agent-proto/command'],
  ['agent-proto/command/configure.h','agent-proto/command'],
  ['agent-proto/command/set-stream-by-event.h','agent-proto/command'],
  ['agent-proto/command/get-stream-caps.h','agent-proto/command'],
  ['agent-proto/command/get-ptz-conf.h','agent-proto/command'],
  ['agent-proto/command/get-audio-detection.h','agent-proto/command'],
  ['agent-proto/command/cam_event.h','agent-proto/command'],
  ['agent-proto/command/cam-ptz.h','agent-proto/command'],
  ['agent-proto/command/get-motion-detection.h','agent-proto/command'],
  ['agent-proto/command/backward-start.h','agent-proto/command'],
  ['agent-proto/command/report-problem.h','agent-proto/command'],
  ['agent-proto/command/get-stream-config.h','agent-proto/command'],
  ['agent-proto/command/stream-start.h','agent-proto/command'],
  ['agent-proto/command/backward-stop.h','agent-proto/command'],
  ['agent-proto/command/cam-hello.h','agent-proto/command'],
  ['agent-proto/command/cam-set-current-wifi.h','agent-proto/command'],
  ['agent-proto/command/command-factory.h','agent-proto/command'],
  ['agent-proto/command/set-stream-config.h','agent-proto/command'],
  ['agent-proto/command/hello.h','agent-proto/command'],
  ['agent-proto/command/get-cam-video-conf.h','agent-proto/command'],
  ['agent-proto/command/command.h','agent-proto/command'],
  ['agent-proto/command/command-list.h','agent-proto/command'],
  ['agent-proto/command/set-osdconf.h','agent-proto/command'],
  ['agent-proto/command/cam-trigger-event.h','agent-proto/command'],
  ['agent-proto/command/set-cam-audio-conf.h','agent-proto/command'],
  ['agent-proto/command-handler.h','agent-proto'],
  ['agent-proto/objects/config.h','agent-proto/objects'],
  ['agent-proto/objects/caps.h','agent-proto/objects'],
  ['agent-proto/proto.h','agent-proto'],
  ['utils/logging.h','utils'],
  ['utils/utils.h','utils'],
  ['utils/properties.h','utils'],
  ['utils/packbits.h','utils'],
  ['utils/loguru.h','utils'],
  ['utils/profile.h','utils'],
  ['utils/base64.h','utils'],
]

foreach h : core_headers
  install_headers(h[0], subdir : h[1])
endforeach